Fix Dropdown menu dark mode background

--- a/styles/dark_mode.css
+++ b/styles/dark_mode.css
@@ -56,6 +56,8 @@ header {
 
 /* Dropdown Menu */
 .dropdown-menu {
+  margin-top: 100px;
+  background-image: none;
   background-color: #001b0e !important;
 }
 
